--- a/Editor/Editor.asmdef
+++ b/Editor/Editor.asmdef
@@ -1,8 +1,12 @@
 {
-    "name": "Core",
-    "rootNamespace": "Com.Septyr.ScriptableObjectArchitecture",
-    "references": [],
-    "includePlatforms": [],
+    "name": "Editor",
+    "rootNamespace": "Com.Septyr.ScriptableObjectArchitecture.Editor",
+    "references": [
+        "GUID:5fce11e3c68903d4ea39c364222a0c55"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
