--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name":"com.septyr.scriptableobjectarchitecture",
 	"displayName":"ScriptableObject-Architecture",
-	"version":"1.1.1",
+	"version":"1.1.2",
 	"unity":"2020.2",
 	"description":"Makes using Scriptable Objects as a fundamental part of your architecture in Unity super easy\nOriginal by Daniel Everland",
 	"keywords":[
@@ -9,7 +9,7 @@
 		"architecture"
 	],
 	"author":{
-		"name": "Septyr",
+		"name": "Septyr Games",
 		"email": "contact@septyr.com",
 		"url": "https://www.septyr.com"
 	}
